--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.3",
+    "mongodb": "^6.3.0",
+    "mongoose": "^9.1.4",
     "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^5.4.530"
   }
